# editor

./: .clinerules  .gitignore  .gitmodules  AGENTS.md  API.md  CHANGELOG.md  GLYPH_CANVAS.md  MILESTONE_ISSUES.md  README.md  build-fontc-wasm.sh  cloudflare-worker.js  generate-api-docs.mjs  package.json  package.sh  release.sh  shapeshifter.html  start-mcp-server.sh  test-mcp.mjs  update-rust-deps.sh
.github/workflows/: ci.yml  deploy.yml  release.yml
articles/: ai-assistant-privacy-and-design.md
babelfont-fontc-build/: Cargo.toml
babelfont-fontc-build/src/: font_reader.rs  glyph_outlines.rs  interpolation.rs  lib.rs
babelfont-rs-local/: Cargo.toml
fontc-local/: Cargo.toml
fontc-local/fea-rs/: Cargo.toml
fontc-local/fontc/: Cargo.toml
fontc-no-rayon/: Cargo.toml
fontc-no-rayon/fea-rs/: Cargo.toml
fontc-no-rayon/fontc/: Cargo.toml
instructions/: BABELFONT_TS_MIGRATION.md  CSS_COLOR_STYLING.md  UI_ELEMENTS.md  UNDO_COLLABORATION_ARCHITECTURE.md  WEBAPP_OVERVIEW.md
mcp-server/: README.md  example-mcp-config.json  package.json
plugins/: .gitignore
strategy/: INFRASTRUCTURE.md  MARKETING.md  MILESTONE_ISSUES.md
test-compiler/: 1-export-to-json.py  README.md  test.sh
webapp/: .prettierignore  _headers  cleanup-old-sw.html  coi-serviceworker.js  debug-sw.html  index.html  index.html.bak  jest.config.js  manifest.json  package.json  playwright.config.ts  serve-with-cors.py  service-worker.js  test-compile-node.js  test-compile-rayon.html  test-compile-worker.js  test-compile.html  test-simple.html  tsconfig.json  webpack.config.js
(+185 files in other folders)
