[package]
name = "babelfont-fontc-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use local babelfont submodule to stay in sync with TypeScript definitions
babelfont = { path = "../webapp/vendor/babelfont-rs", default-features = false, features = ["fontir", "glyphs", "ufo", "fontlab", "types"] }
kurbo = "0.12"
# Use local fontc with rayon completely removed
wasm-bindgen = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1"
tempfile = "3"
js-sys = "0.3.83"
# Use the same fontdrasil version as fontc for compatibility (matching fontc's version)
fontdrasil = { git = "https://github.com/googlefonts/fontc" }
write-fonts = "0.44"
# For font parsing and reading OpenType metadata
read-fonts = "0.36"
skrifa = "0.28"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
